--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       </div>
       <div class="col-md-6">
         <h1 style=" font-family: 'Playfair Display', serif; font-weight: 700;">What can I help you with?</h1>
-        <form id="contact-form">
+        <form id="contact-form" action="">
           <div class="row">
             <div class="email col-md-6">
               <label for="inputEmail4"></label>
