navbar link added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
 
 <head>
   <meta charset="UTF-8">
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#home">Home</a>
+                  <a class="nav-link" href="#home" >Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#service">Services</a>
@@ -58,7 +58,7 @@
     </div>
   </header>
 
-  <section>
+  <section id="home">
     <div class="container">
       <div class="row">
         <div class="col-md-6 px-5" id="home">
@@ -82,7 +82,7 @@
   </section>
 
 
-  <section class="bg-light">
+  <section class="bg-light" id="service">
     <div class="container">
       <div class="row">
         <h1 style="font-family: 'Playfair Display', serif; font-weight: 700;" class="text-center">Services</h1>
@@ -227,7 +227,7 @@
     </div>
 
   </section>
-  <section style="background: #e7e8e3;">
+  <section style="background: #e7e8e3; " id="about-section">
     <div class="container-fluid">
       <div class="row">
 
