--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
 </head>
 
 <body>
-  <header class=" var(--bs-font-sans-serif);">
+  <header class=" var(--bs-font-sans-serif);" >
     <div class="row text-black m-auto">
-      <div class="col-md-6 col-6 px-5">
-        <h2 style="font-family: 'Playfair Display', serif; font-size: 40px; font-weight: 900;">S.</h2>
-      </div>
+     
 
-      <div class="col-md-6 col-6" >
-        <nav class="navbar navbar-expand-lg navbar-light  font-family:Lato, sans-serif; margin-left:auto"
+        <nav class="navbar navbar-expand-lg navbar-light font-family:Lato, sans-serif; margin-left:auto" id="nav"
           style="font-size: 18px; margin-left:autox;">
+          <div class="col-md-6">
+         <h1 style="font-family: 'Playfair Display', serif;; font-weight: 540; font-size: 80px;">s.</h1>
+        </div>
+        <div class="col-md-6">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -50,6 +51,7 @@
             </div>
           </div>
         </nav>
+      </div>
 
       </div>
     </div>
@@ -57,6 +59,8 @@
     </div>
     </div>
   </header>
+  <br>
+  <br>
 
   <section id="home">
     <div class="container">
